# rust-msg

./: Cargo.toml  README.md
db/: init.sql
src/: auth.rs  entity.rs  main.rs  templates.rs
static/: login.html  register.html  style.css
templates/: home.html  search.html
