[package]
name = "rust-msg"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 2

[dependencies]
# Actix Web
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
actix-files = "0.6"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MySQL
mysql = "23"

# Other
env_logger = "0.9"
askama = "0.11"