[package]
name = "rust-msg"
version = "0.1.0"
edition = "2021"

[dependencies]
# Actix framework
actix = "0.13"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4.1"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MySQL
mysql = "23"

# JWT
jsonwebtoken = "8"
chrono = "0.4"

# Other
env_logger = "0.10"
log = "0.4"